<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_changedifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textSize="40sp"
            android:text="@string/seekbar_difficulty"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/tv_difficultyexpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textStyle="italic"
            android:textSize="20sp"
            android:text="@string/text_difficulty"
            android:layout_margin="20dp"
            />

        <SeekBar
            android:id="@+id/seekBar"
            android:max="9"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tv_difficultynumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/chosen_difficulty" />

        <Button
            android:id="@+id/buttonSubmitLevel"
            android:layout_width="328dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickSubmitChosenLevel"
            android:text="@string/submit_difficulty_level"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>